clusters/main/configs/hubble-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hubble-ui
  namespace: traefik
spec:
  entryPoints:
  - websecure
  - web
  routes:
  - match: Host(`hubble.local.m1xxos.tech`)
    kind: Rule
    services:
    - name: hubble-ui
      kind: Service
      namespace: kube-system
      port: 80
  tls:
    secretName: local-m1xxos-tech
